flux/apps/ai/llama-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  llama-server
  namespace: llama-server
spec:
  selector:
    app:  llama-server
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
