flux/apps/ai/llama-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-server
  namespace: llama-server
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - llama-server.${GLOBAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - name: llama-server
        port: 8080
      timeouts:
        request: 0s
